[gd_scene load_steps=10 format=3 uid="uid://cwfqqutxijwlw"]

[ext_resource type="Theme" uid="uid://de5s6yajhp1tc" path="res://theme/dark_theme.tres" id="1_p3g6w"]
[ext_resource type="Script" path="res://scripts/views/info_panel_manager.gd" id="2_hw65x"]
[ext_resource type="PackedScene" uid="uid://dwyehtwti04ug" path="res://scenes/setup_manager.tscn" id="2_nf4k3"]
[ext_resource type="Script" path="res://scripts/views/ButtonManager.gd" id="3_xs5ml"]
[ext_resource type="Script" path="res://scripts/views/GraphPanel.gd" id="4_dtqo3"]
[ext_resource type="Texture2D" uid="uid://df0yptjpx0fmb" path="res://assets/icons/media-play-symbol.png" id="5_ywtr8"]
[ext_resource type="Texture2D" uid="uid://d1bdnmghunm8j" path="res://assets/icons/forward-media-step.png" id="6_oc38r"]
[ext_resource type="Texture2D" uid="uid://7ydesnj80y03" path="res://assets/icons/media-stop-button.png" id="7_44te1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4j41o"]
bg_color = Color(0.929412, 0.929412, 0.929412, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_p3g6w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2
split_offset = 276

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2
theme = ExtResource("1_p3g6w")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HSplitContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="InfoPanelManager" type="ScrollContainer" parent="MarginContainer/HSplitContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
script = ExtResource("2_hw65x")

[node name="SetupManager" parent="MarginContainer/HSplitContainer/PanelContainer/MarginContainer/InfoPanelManager" instance=ExtResource("2_nf4k3")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
vertical_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_p3g6w")

[node name="ButtonManager" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
script = ExtResource("3_xs5ml")

[node name="MoveButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["editor_controls"]]
layout_mode = 2
toggle_mode = true
text = "Move"

[node name="ConnectButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["editor_controls"]]
layout_mode = 2
toggle_mode = true
text = "Connect"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["editor_controls"]]
layout_mode = 2

[node name="PlaceStartButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["editor_controls"]]
layout_mode = 2
toggle_mode = true
text = "Place start"

[node name="PlaceGoalButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["editor_controls"]]
layout_mode = 2
toggle_mode = true
text = "Place goals"

[node name="PlaceNodeButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["editor_controls"]]
layout_mode = 2
toggle_mode = true
text = "Place nodes"

[node name="Spacer" type="Control" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartVisButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["editor_controls"]]
layout_mode = 2
text = "Start Visualisation"
icon = ExtResource("5_ywtr8")

[node name="RunnerStepButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["runner_controls"]]
visible = false
layout_mode = 2
text = "Step"
icon = ExtResource("6_oc38r")

[node name="RunnerStopButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["runner_controls"]]
visible = false
layout_mode = 2
text = " Stop"
icon = ExtResource("7_44te1")

[node name="RunnerAutoButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["runner_controls"]]
visible = false
layout_mode = 2
toggle_mode = true
text = "Auto step"
icon = ExtResource("5_ywtr8")

[node name="Spacer3" type="Control" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["runner_controls"]]
visible = false
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["runner_controls"]]
visible = false
layout_mode = 2
text = "Step interval:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="RunnerIntervalLabel" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["runner_controls"]]
visible = false
layout_mode = 2
horizontal_alignment = 2
vertical_alignment = 1

[node name="RunnerIntervalSlider" type="HSlider" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["runner_controls"]]
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 0.2
max_value = 3.0
step = 0.1
value = 0.2

[node name="Spacer2" type="Control" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FileMenuButton" type="MenuButton" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" groups=["editor_controls"]]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_p3g6w")
text = "File"
flat = false
item_count = 4
popup/item_0/text = "Save"
popup/item_0/id = 0
popup/item_1/text = "Save as"
popup/item_1/id = 1
popup/item_2/text = "Open"
popup/item_2/id = 2
popup/item_3/text = "New"
popup/item_3/id = 3

[node name="FileDialogSave" type="FileDialog" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager"]
initial_position = 1
size = Vector2i(600, 400)
access = 2
filters = PackedStringArray("*.stt ; Search Tree Files")

[node name="FileDialogOpen" type="FileDialog" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager"]
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.stt ; Search Tree Files")

[node name="Timer" type="Timer" parent="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager"]

[node name="GraphPanel" type="Panel" parent="MarginContainer/HSplitContainer/VBoxContainer"]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_4j41o")
script = ExtResource("4_dtqo3")

[connection signal="toggled" from="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager/MoveButton" to="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" method="_on_move_button_toggled"]
[connection signal="toggled" from="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager/ConnectButton" to="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" method="_on_connect_button_toggled"]
[connection signal="toggled" from="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager/PlaceStartButton" to="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" method="_on_place_start_button_toggled"]
[connection signal="toggled" from="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager/PlaceGoalButton" to="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" method="_on_place_goal_button_toggled"]
[connection signal="toggled" from="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager/PlaceNodeButton" to="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" method="_on_place_node_button_toggled"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager/StartVisButton" to="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" method="_on_start_vis_button_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager/RunnerStepButton" to="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" method="_on_runner_step_button_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager/RunnerStopButton" to="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" method="_on_runner_stop_button_pressed"]
[connection signal="toggled" from="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager/RunnerAutoButton" to="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" method="_on_runner_auto_button_toggled"]
[connection signal="value_changed" from="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager/RunnerIntervalSlider" to="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" method="_on_runner_interval_slider_value_changed"]
[connection signal="file_selected" from="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager/FileDialogSave" to="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" method="_on_file_dialog_save_file_selected"]
[connection signal="visibility_changed" from="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager/FileDialogSave" to="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" method="_on_file_dialog_visibility_changed"]
[connection signal="file_selected" from="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager/FileDialogOpen" to="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" method="_on_file_dialog_open_file_selected"]
[connection signal="visibility_changed" from="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager/FileDialogOpen" to="MarginContainer/HSplitContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/ButtonManager" method="_on_file_dialog_visibility_changed"]
